<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_bug_report"
        android:icon="@drawable/ic_bug_report_black_24dp"
        android:title="@string/doodle" />

    <item android:title="@string/fooble">
        <menu>
            <item
                android:id="@+id/navigation_info"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/foodle" />
            <item
                android:id="@+id/navigation_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/goodle" />
        </menu>
    </item>
</menu>
